[package]
name = "github-activity"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
stringcase = "0.3.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-macros = "2.4.0"
